[package]
name = "recordkeeper"
version = "0.3.0"
authors = [""]
edition = "2018"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
cfg-if = "1.0.0"
serde_json = "1.0.111"
worker = "0.0.17"

[profile.release]
lto = true
strip = true
codegen-units = 1
